crates/pg_syntax/tests/snapshots/postgres_regress/rowtypes@120.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select row(1, 2)::testtype1 *<> row(1, 3)::testtype1;"
---
SelectStmt@0..53
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..52
    AExpr@7..52
      TypeCast@7..27
        RowExpr@7..15
          Row@7..10 "row"
          Ascii40@10..11 "("
          AConst@11..12
            Iconst@11..12 "1"
          Ascii44@12..13 ","
          Whitespace@13..14 " "
          AConst@14..15
            Iconst@14..15 "2"
        Ascii41@15..16 ")"
        Typecast@16..18 "::"
        TypeName@18..27
          Ident@18..27 "testtype1"
      Whitespace@27..28 " "
      Op@28..31 "*<>"
      Whitespace@31..32 " "
      TypeCast@32..52
        RowExpr@32..40
          Row@32..35 "row"
          Ascii40@35..36 "("
          AConst@36..37
            Iconst@36..37 "1"
          Ascii44@37..38 ","
          Whitespace@38..39 " "
          AConst@39..40
            Iconst@39..40 "3"
        Ascii41@40..41 ")"
        Typecast@41..43 "::"
        TypeName@43..52
          Ident@43..52 "testtype1"
  Ascii59@52..53 ";"

