crates/pg_syntax/tests/snapshots/postgres_regress/rowtypes@122.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select row(1, 3)::testtype1 *> row(1, 2)::testtype1;"
---
SelectStmt@0..52
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..51
    AExpr@7..51
      TypeCast@7..27
        RowExpr@7..15
          Row@7..10 "row"
          Ascii40@10..11 "("
          AConst@11..12
            Iconst@11..12 "1"
          Ascii44@12..13 ","
          Whitespace@13..14 " "
          AConst@14..15
            Iconst@14..15 "3"
        Ascii41@15..16 ")"
        Typecast@16..18 "::"
        TypeName@18..27
          Ident@18..27 "testtype1"
      Whitespace@27..28 " "
      Op@28..30 "*>"
      Whitespace@30..31 " "
      TypeCast@31..51
        RowExpr@31..39
          Row@31..34 "row"
          Ascii40@34..35 "("
          AConst@35..36
            Iconst@35..36 "1"
          Ascii44@36..37 ","
          Whitespace@37..38 " "
          AConst@38..39
            Iconst@38..39 "2"
        Ascii41@39..40 ")"
        Typecast@40..42 "::"
        TypeName@42..51
          Ident@42..51 "testtype1"
  Ascii59@51..52 ";"

