crates/pg_syntax/tests/snapshots/postgres_regress/rowtypes@133.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select row(0, false)::testtype2 *< row(0, true)::testtype2;"
---
SelectStmt@0..59
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..58
    AExpr@7..58
      TypeCast@7..31
        RowExpr@7..19
          Row@7..10 "row"
          Ascii40@10..11 "("
          AConst@11..12
            Iconst@11..12 "0"
          Ascii44@12..13 ","
          Whitespace@13..14 " "
          AConst@14..19
            FalseP@14..19 "false"
        Ascii41@19..20 ")"
        Typecast@20..22 "::"
        TypeName@22..31
          Ident@22..31 "testtype2"
      Whitespace@31..32 " "
      Op@32..34 "*<"
      Whitespace@34..35 " "
      TypeCast@35..58
        RowExpr@35..46
          Row@35..38 "row"
          Ascii40@38..39 "("
          AConst@39..40
            Iconst@39..40 "0"
          Ascii44@40..41 ","
          Whitespace@41..42 " "
          AConst@42..46
            TrueP@42..46 "true"
        Ascii41@46..47 ")"
        Typecast@47..49 "::"
        TypeName@49..58
          Ident@49..58 "testtype2"
  Ascii59@58..59 ";"

