crates/pg_syntax/tests/snapshots/postgres_regress/rowtypes@134.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select row(0, false)::testtype2 *<> row(0, true)::testtype2;"
---
SelectStmt@0..60
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..59
    AExpr@7..59
      TypeCast@7..31
        RowExpr@7..19
          Row@7..10 "row"
          Ascii40@10..11 "("
          AConst@11..12
            Iconst@11..12 "0"
          Ascii44@12..13 ","
          Whitespace@13..14 " "
          AConst@14..19
            FalseP@14..19 "false"
        Ascii41@19..20 ")"
        Typecast@20..22 "::"
        TypeName@22..31
          Ident@22..31 "testtype2"
      Whitespace@31..32 " "
      Op@32..35 "*<>"
      Whitespace@35..36 " "
      TypeCast@36..59
        RowExpr@36..47
          Row@36..39 "row"
          Ascii40@39..40 "("
          AConst@40..41
            Iconst@40..41 "0"
          Ascii44@41..42 ","
          Whitespace@42..43 " "
          AConst@43..47
            TrueP@43..47 "true"
        Ascii41@47..48 ")"
        Typecast@48..50 "::"
        TypeName@50..59
          Ident@50..59 "testtype2"
  Ascii59@59..60 ";"

