crates/pg_syntax/tests/snapshots/postgres_regress/rowtypes@138.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select row(1, 'abc')::testtype3 *> row(1, 'abd')::testtype3;"
---
SelectStmt@0..60
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..59
    AExpr@7..59
      TypeCast@7..31
        RowExpr@7..19
          Row@7..10 "row"
          Ascii40@10..11 "("
          AConst@11..12
            Iconst@11..12 "1"
          Ascii44@12..13 ","
          Whitespace@13..14 " "
          AConst@14..19
            Sconst@14..19 "'abc'"
        Ascii41@19..20 ")"
        Typecast@20..22 "::"
        TypeName@22..31
          Ident@22..31 "testtype3"
      Whitespace@31..32 " "
      Op@32..34 "*>"
      Whitespace@34..35 " "
      TypeCast@35..59
        RowExpr@35..47
          Row@35..38 "row"
          Ascii40@38..39 "("
          AConst@39..40
            Iconst@39..40 "1"
          Ascii44@40..41 ","
          Whitespace@41..42 " "
          AConst@42..47
            Sconst@42..47 "'abd'"
        Ascii41@47..48 ")"
        Typecast@48..50 "::"
        TypeName@50..59
          Ident@50..59 "testtype3"
  Ascii59@59..60 ";"

